Fixing UI overflow issues

--- a/Styles/tetris-igra.css
+++ b/Styles/tetris-igra.css
@@ -340,7 +340,7 @@ body {
 
     .tetris {
         flex: 4 1;
-        height: auto;
+        max-height: 100%;
     }
 
     .tetris-hud {
